[package]
name = "tuxedo-keyboard-cli"
version = "0.1.0"
authors = ["Carsten <foss@datahugger.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
error-chain = { version = "0.12" }
nix = "0.17.0"

[[bin]]
name = "tuxedo-keyboard-cli"
path = "src/main.rs"
